--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/jquery": "^3.5.16",
+    "html-react-parser": "^3.0.16",
     "jquery": "^3.6.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
